threadsafe Heap access (SpellDecayTask); thread cleanup